[package]
name = "gunther_adv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.17.0"
bevy_rapier2d = { version = "0.20.0", features = [ "simd-stable", "debug-render-2d" ] }
bevy_ecs_ldtk = "0.5.0"
rand = "0.8.5"
kayak_ui = "0.2"
iyes_loopless = "0.9.1"